Backend/#7/chat service
* backend #7: add chat-service

* backend #7: add message-service

* backend #7: regenerate swagger

* backend #7: Merge remote-tracking branch
