# backend/user_service/docs/swagger.yaml
@@ -318,6 +318,37 @@ paths:
       summary: Get user info
       tags:
       - User
+  /user/id/{id}:
+    get:
+      description: Get public user info by user ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User info
+          schema:
+            $ref: '#/definitions/handler.GetUserResponse'
+        "400":
+          description: Invalid user ID
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      summary: Get user info by ID
+      tags:
+      - User
 schemes:
 - http
 swagger: "2.0"
